kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_stmt_recovery_8.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 194
expression: "crate::tests::parsing_module_string(r#\"schema A:\na: int =\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: "",
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 2,
            end_column: 0,
        },
        Node {
            node: Assign(
                AssignStmt {
                    targets: [
                        Node {
                            node: Identifier {
                                names: [
                                    "a",
                                ],
                                pos: [
                                    Node {
                                        node: (),
                                        filename: "",
                                        line: 2,
                                        column: 0,
                                        end_line: 2,
                                        end_column: 1,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Store,
                            },
                            filename: "",
                            line: 2,
                            column: 0,
                            end_line: 2,
                            end_column: 1,
                        },
                    ],
                    value: Node {
                        node: Missing(
                            MissingExpr,
                        ),
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    type_annotation: Some(
                        Node {
                            node: "int",
                            filename: "",
                            line: 2,
                            column: 3,
                            end_line: 2,
                            end_column: 6,
                        },
                    ),
                    ty: Some(
                        Node {
                            node: Basic(
                                Int,
                            ),
                            filename: "",
                            line: 2,
                            column: 3,
                            end_line: 2,
                            end_column: 6,
                        },
                    ),
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 2,
            end_column: 8,
        },
    ],
    comments: [],
}

